--- a/company.html
+++ b/company.html
@@ -35,9 +35,9 @@
 			</button><a href="#" class="navbar-brand"><img src="image/index-assets/tree.png" class="brand-img"></a></div>
 		<div id="navbar1" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#" style="color: #fff;">首页</a></li>
-				<li><a href="#" style="color: #fff;">职业</a></li>
-				<li><a href="#" style="color: #fff;">推荐</a></li>
+				<li><a href="index.html" style="color: #fff;">首页</a></li>
+				<li><a href="position.html" style="color: #fff;">职业</a></li>
+				<li><a href="company.html" style="color: #fff;">推荐</a></li>
 				<li><a href="#" style="color: #fff;">关于</a></li>
 			</ul>
 		</div>
