--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 		</ol>
 		<ul class="icon-group list-inline">
 			<li><a href="#" class="bg-qq"></a></li>
-			<li><a href="#" class="bg-weixin"></a></li>
+			<li class="weixin"><a href="#" class="bg-weixin"></a><img src="image/index-assets/erweima.png"></li>
 			<li><a href="#" class="bg-weibo"></a></li>
-		</ul>	
+		</ul>
+	
 	</header>
 	<!-- 导航栏 -->
 	<nav class="navbar navbar-default">
