--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+	
+	<link rel="stylesheet" type="text/css" href="css/general-css.css">
 	<link rel="stylesheet" type="text/css" href="css/index-style.css">
 	<title>文档标题</title>
 </head>
 <body>
-	<header>
+	<a class="btn top-btn" href="#top">
+		<span class="glyphicon glyphicon-arrow-up"></span>
+	</a>
+	<a class="btn bottom-btn" href="#bottom">
+		<span class="glyphicon glyphicon-arrow-down"></span>
+	</a>
+	<header id="top">
 		<span class="phone">咨询电话：010-59478634</span>
 		<ol class="breadcrumb">
 		    <li><a href="#">登录</a></li>
@@ -25,7 +32,7 @@
 			<li class="weixin"><a href="#" class="bg-weixin"></a><img src="image/index-assets/erweima.png"></li>
 			<li><a href="#" class="bg-weibo"></a></li>
 		</ul>
-	
+
 	</header>
 	<!-- 导航栏 -->
 	<nav class="navbar navbar-default">
@@ -206,7 +213,7 @@
 	</div>
 
 	<!-- footer -->
-	<footer>
+	<footer id="bottom">
 		<div class="footer-wrap">
 			<div class="left">
 				<div class="left-wrap">
@@ -239,6 +246,8 @@
 		</div>
 		<p>  Copyright © 2015技能树 www.jnshu.com  All Rights Reserved | 京ICP</p>
 	</footer>
+
+	<script type="text/javascript" src="common.js"></script>
 
 </body>
 </html>
